Fixe sidebarBtn in dark mode

--- a/django_project/blog/static/blog/main.css
+++ b/django_project/blog/static/blog/main.css
@@ -652,6 +652,11 @@ body.dark-mode .sidebarBtn button {
   border-color: #30363d !important;
 }
 
+body.dark-mode .sidebarBtn {
+    background: #161b22 !important;
+    border-top-color: #30363d !important;
+}
+
 body.dark-mode .sidebarBtn button:hover {
   color: #e6edf3 !important;
   background: #30363d !important;
